css/main.css
/* ... */
.stepIndicator > li.done > a {
    background-color: #e5e5e5;
    color:#1946a0;
}
.stepIndicator > li.done > a:after {
    border-color: transparent #e5e5e5;
}
.stepIndicator > li.todo > a {
    background-color: #e5e5e5;
    color: #999;
		cursor: default;
}
.stepIndicator > li.todo > a:after {
    border-color: transparent #e5e5e5;
}
.stepIndicator > li.active > a {
    background-color: #f29106;
}
.stepIndicator > li.active > a:after {
    border-color: transparent #f29106;
}
.stepIndicator > li.active > a:hover {
    background-color: #f29106;
}
.stepIndicator > li > a > span {
    margin-left: 25px;
}
.stepIndicator > li:last-child > a:after {
    background-color:white;
		border-width: 0;
}

.nav-pills > .active > a, .nav-pills > .active > a:hover {
    color: #FFFFFF !important;
}

.nav-pills > .active i {
  background-image: url("http://auto.ricardo.ch/Auto/Content/images/1/Sprites/ricardo_icons_white.png");
}

/* +++++++++++++++++++++++++ Step1 +++++++++++++++++++++++++ */

/* Category-Selection */

.navCat ul {
    display: none;
}
.navCat:first-child ul {
    display: block;
}
.navCat.span2 {
    margin-left: 0 !important;
    margin-right: 2.12766%;
    width: 22.8%;
}
.navCat.expandLvl {
    width: 18.2%;
}
.navCat.span2:last-child {
    margin-right: 0;
}

.navCat li {
}

.navCat a {
    color: #333;
    padding-right: 25px !important;
    position: relative;
    border-bottom: 1px solid #CCCCCC;
}

.navCat .catSuggest a {
    color: #757575;
}
.navCat .catSuggest .catAlternativ a {
    color: #fc9013;
}

.navCat .catSuggest .catAlternativ i {
    background-image: url("https://pics.ricardostatic.ch/contents/ch/assets/images/ricardo_icons_orange.png");
}

.navCat li.active a {
    color: #fff !important;
    background-color: #a6b825 !important;
}

.navCat li.active i {
    background-image: url("https://pics.ricardostatic.ch/contents/ch/assets/images/ricardo_icons_white.png") !important;
}

.navCat li i {
    display: none;
    position: absolute;
    right: 5px;
    top: 7px;
}

.navCat li .icon-info-sign {
    display: inline-block;
}

.navCat li.hasSub i, .navCat li.active i {
    display: block;
}

.navCat li.active i {
    background-position: -288px 0;
}

/* .cars Category-Selector */

#carsCatSelector{
	margin-bottom:15px;
}
#carsCatSelector a{
	display:inline-block;
	float:none;
	height:110px;
	padding-top:80px;
	position:relative;
}
#carsCatSelector a.selected{
	border-color:#a6b825;
}
#carsCatSelector img{ 
	left: 50%;
	margin-left: -44px;
	position: absolute;
	top: 5px;
}

#carsCatSelector .selected .cbMainCatMark {
	background-image:url('../img/cb_maincat_mark.png');
	width:23px;
	height:14px;
	display:inline-block;
	position:absolute;
	left:50%;
	margin-left:-11px;
	top:113px;
	z-index:99;
	}

/* .cars Car-Selector */

#carSelector .well{
	padding-bottom:10px;
	min-height:355px;
}

#carSelector .well.blurSelector{
	background-color: #fff;
	border-color:#eee;
	color:#bbb;
}

#carSelector .well.blurSelector h4, #carSelector .well.blurSelector select{
	color:#bbb;
}

#carSelector .seperator{
	font-weight: bold;
	margin-top: 170px;
	text-align: center;
}

#carSelector .seperator i{
	margin-top:3px;
}

#carSelector .well.selected{
	border-color: #a6b825;
}

.carIDHint {
	position:relative;
	height:110px;
	margin-top:15px;
}
.carIDHint div:last-child {
	position:absolute;
	bottom:0;
	right:0px;
	min-height:auto;
}

/* .cars Version-Selector */

#carVerionSelector .oddRow td {
	background-color:#FFF;
} 
#carVerionSelector .versionDetails td {
	background-color:#bcd229;
	color:#fff;
} 
#carVerionSelector .versionBasic {
	cursor:pointer;
} 
#carVerionSelector .versionBasic.selected td {
	background-color: #a6b825;
	color:#fff;
} 
#carVerionSelector .versionDetails {
	display:none;
} 
#carVerionSelector .versionDetails td{
	padding-left: 33px;
} 
#carVerionSelector .versionDetails dl {
	margin:0;
} 
#carVerionSelector .versionDetails dt, #carVerionSelector .versionDetails dd {
	display: inline-block;
	font-weight:normal;
} 
#carVerionSelector .versionDetails dt:after {
 content: ": ";
} 
#carVerionSelector .versionDetails dd {
	border-right: 1px dotted;
	display: inline-block;
	margin-right: 10px;
	padding-right: 15px;
} 

#altCarAttributes {
	padding-right: 0;
	}

#altCarAttributes .control-group {
	width: 31.5%;
	margin: 0 1.5% 0 0;
	}

/* +++++++++++++++++++++++++ Step2 (Core) +++++++++++++++++++++++++ */

.secondLangAd {
	}

#savedForLater {
    margin-bottom: 30px;
}
#savedForLater h5 {
    margin-top: 0;
}
.uploadProgressOverlay {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
.removeImageOverlay {
    position: absolute;
    top: 0;
    right: 0;
    background: #ffffff;
    padding: 3px;
}
.uploadProgressSpinner {
    position: absolute;
    background: url("../img/loading.gif") no-repeat scroll 50% 50% rgba(255,255,255,0.7);
    height: 100%;
    width: 100%;
}
.uploadCancelBtn {
    z-index: 2;
    display: none;
}
.mainProductImageTitle {
    clear: left;
}
.productImage .progress {
    position: absolute;
    bottom: 0;
    width: 100%;
    margin-bottom: 0;
    border-radius: 0;
}
.productImage .progress .bar {
    width: 0%;
}
/* File-Upload */
.fileinput-button {
    position: relative;
    overflow: hidden;
    height: 100%;
}
.fileinput-button input {
    position: absolute;
    height: 100%;
    top: 0;
    right: 0;
    margin: 0;
    opacity: 0;
    filter: alpha(opacity=0);
    font-size: 23px;
    direction: ltr;
    cursor: pointer;
}
/* end file-upload */
.productImage {
    position: relative;
    float: left;
    width: 90px;
    height: 90px;
    margin: 0 20px 20px 0;
}
.addProductImagesOverlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #dfdfdf;
    text-align: center;
}
.addProductImageLink {
    margin-top: 15px;
    padding: 0;
}
.addProductImageLink img {
    display: block;
    margin: 0 auto;
}
/* ... */

